--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,6 +11,7 @@ analyzer:
   errors:
     constant_identifier_names: ignore
     invalid_annotation_target: ignore
+    prefer_const_constructors: ignore
     unused_element: ignore
 include: package:flutter_lints/flutter.yaml
 
