--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   phosphor_flutter: ^2.0.1
   equatable: ^2.0.7
   dartz: ^0.10.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
