last round of test, though some failed...Lol

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,10 +58,10 @@ flutter_icons:
   image_path: "assets/images/png/qalla_app_icon.png"
   min_sdk_android: 21
   icon_size: 36
-  macos:
-    generate: true
-    image_path: "assets/images/png/qalla_app_icon.png"
-    icon_size: 36
+  # macos:
+  #   generate: true
+  #   image_path: "assets/images/png/qalla_app_icon.png"
+  #   icon_size: 36
 
 flutter_gen:
   integrations:
@@ -75,6 +75,7 @@ dev_dependencies:
 
   # Code Generation
   build_runner: ^2.4.6
+  flutter_launcher_icons: any
   flutter_gen_core: 5.8.0
   flutter_gen: ^5.8.0
   flutter_gen_runner: ^5.8.0
