--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,6 +13,7 @@ analyzer:
     invalid_annotation_target: ignore
     prefer_const_constructors: ignore
     unused_element: ignore
+    unused_result: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
